--- a/_posts/2020-03-05-Blank.md
+++ b/_posts/2020-03-05-Blank.md
@@ -1,7 +1,17 @@
 ---
 layout: post
-title:  "Blank post"
+title:  "Notes: Modern C by Jens Gustedt "
+categories: [books]
+tags: [modern_c]
 date:   2020-03-05 12:00:00 -0500
 ---
 
-## Blank post
+## Test
+
+{% highlight ruby %}
+def print_hi(name)
+  puts "Hi, #{name}"
+end
+print_hi('Tom')
+# => prints 'Hi, Tom' to STDOUT.
+{% endhighlight %}
