More section 1 work.

--- a/_posts/2020-03-05-Modern_C._1.md
+++ b/_posts/2020-03-05-Modern_C._1.md
@@ -69,7 +69,7 @@ I compiled this program on my machine (Ubuntu, intel i7 8700k, x86) with `c99 li
 
 Output:
 
-```text
+```zsh
 element 0 is 9,         its square is 81
 element 1 is 2.9,       its square is 8.41
 element 2 is 0,         its square is 0
@@ -115,5 +115,97 @@ necessary to understand the interfaces to the tools that we utilize for compilat
 
 The name of your C compiler and the arguments it accepts will depend on your specific operating system
 environment and platform. There is a good reason for this: the binary code that the compiler outputs is
-actually platform specific. That is, the binary is only compatible with certain computers. This is was a
-big deal 
+actually platform specific. That is, the binary is only compatible with certain computers. C's purpose is
+to provide a useful abstraction on top of several different machine languages. This abstraction typically
+lives on top of another program, called the assembler.
+
+A C program which is correct is portable across different computer platforms/architectures. This book will
+focus heavily on writing what is viewed as 'correct' C code to ensure proper portability across computers.
+There may be some platforms that claim to be correct C but do not properly implement the latest specification.
+There may also exist some platforms which are correct but also accept incorrect programs or provide support for
+C that are non-standard and not portable. Running and testing a C program on a single platform does not
+guarantee portability in an acceptable sense.
+
+The purpose of the compiler is to make sure that the programs written in C, such as the small one written above, is executable on a platform that it is compiled for. Since my machine is running WSL/Ubuntu, I have
+access to c99. I wrote above the command I used to compile and execute the example C program. Here is the
+command the book gives as an example.
+
+```zsh
+c99 -Wall -o listing1.1 listing1.1.c -lm
+```
+
+Let's break this line down a bit.
+
+* c99 is the name of the compiler program
+* -Wall warns us about anything the compiler finds to be strange during execution of compilation
+* -o listing1.1 indicates what the output file should be named
+* listing1.1.c indicates the name of the source file that contains C code we want to compile.
+* -lm lets the compiler know that we want to add some standard math functions to the compilation. We will need these later.
+
+As shown above, execute this compiled program using
+
+```zsh
+./listing1.1
+```
+
+Portability means the behavior of the program is identical across computers. If you were to execute the
+example program from above on your machine, you should see the same output. However, it is often the case that
+we will write programs that work only sometimes or only partially. They may produce unreliable results that
+do not make sense on other machines. The compiler might also complain about certain statements in your code.
+Take this as an example.
+
+```c
+// listing1.2.c
+
+void main() {
+  int i;
+  double A[5] = {
+    9.0,
+    2.9,
+    3.E*25,
+    .00007,
+  };
+
+  for (i = 0; i < 5; ++i) {
+    printf("element %d is %g, \tits square is %g\n",
+           i,
+           A[i],
+           A[i] * A[i]);
+  }
+
+  return 0;
+}
+```
+
+Compile this with a command such as
+
+```shell
+c99 -Wall -o listing1.2 listing1.2.c  
+```
+
+You should see some output that looks like
+
+```zsh
+listing1.2.c:1:6: warning: return type of ‘main’ is not ‘int’ [-Wmain]
+ void main() {
+      ^~~~
+listing1.2.c: In function ‘main’:
+listing1.2.c:11:5: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
+     printf("element %d is %g, \tits square is %g\n",
+     ^~~~~~
+listing1.2.c:11:5: warning: incompatible implicit declaration of built-in function ‘printf’
+listing1.2.c:11:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
+listing1.2.c:17:10: warning: ‘return’ with a value, in function returning void
+   return 0;
+          ^
+listing1.2.c:1:6: note: declared here
+ void main() {
+```
+
+Now we see quite a few warnings. Despite this, the compiler still produced an executable binary file.
+However, the output from running this program may appear a little different.
+
+I do not have `clang` installed but the author explains that this compiler is even more picky than gcc/c99.
+It provides even more lines with diagnostics information. Diagnostics output is useful information that helps
+debug programs at the compilation phase. `clang` would not produce an executable binary if we tried to compile
+the above program with that compiler.
