--- a/_posts/2020-03-05-Modern_C._1.md
+++ b/_posts/2020-03-05-Modern_C._1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Modern C, Jens Gustedt Chapter 1"
+title:  "Modern C, Jens Gustedt Level 0 Encounter"
 categories: [books]
 tags: [modern_c]
 date:   2020-03-05 12:00:00 -0500
@@ -9,7 +9,7 @@ date:   2020-03-05 12:00:00 -0500
 All material is copyright of the original Author. I do not claim any material or code used as my own.
 What follows are my own notes and paraphrasing of the original material.
 
-## Chapter 1 Notes - Getting started
+## Level 0 Notes - Encounter
 
 ### Getting Started
 
@@ -229,4 +229,38 @@ Sections
 : Object definitions
 : Statements and the compiler
 
+The examples from the previous section were pretty basic. Real programs written in C will, predictably, be more
+complex in their construction. The overall structure will be similar, but they will inherently be more useful
+while being more intricate. There are two major aspects of a C program that are worthy of our consideration.
+One being that of syntax, that is, what is a valid C program. The other being semantics, that is, how do we
+specify what it is that we want the program to accomplish. Said another way, semantics of a C program is
+determining the meaning of the program. We will explore the aspect of syntax (or grammar) and a few different
+aspects of semantics. Semantics will include declarative, definition, and statements as they relate to the
+meaning of the program.
 
+##### Grammar in C
+
+C programs are composed of several types of elements of text; these elements of text make up a sort of grammar.
+
+**Special Words**, or keywords. Our previous examples included a few special words, like *#include*, *int*,
+*void*, *double*, *for*, and *return*. These words have very precise meaning in C. Their meanings can not be
+modified in programs.
+
+**Punctuation**. C has several types of marks which serve as punctuation in programs.
+Brackets in particular are widely seen.
+
+* { ... } Curly brackets
+* ( ... ) Parentheses
+* [ ... ] Square brackets
+* /* ... */ block/multi-line comments
+* < ... > have special use and are rare in C
+
+The first four brackets are not required to open and close on the same line. This is seen in the above
+examples, specifically when using a `for` loop or calling `printf`.
+
+Commas and semicolons both appear in C as separators or terminators. Commas separate the arguments to `printf`,
+for example. The comma can also trail the last element in a list definition.
+
+Newcomers to C might have difficulty in noticing the subtle differences between the different meaning of the
+same punctuation used on different occasions. It is important to realize that punctuation characters can be
+used repeatedly in different conditions to produce different outcomes in the program.
